<resources>
    <string name="app_name">Finance Tracker</string>
    <string name="app_logo">App logo</string>
    <string name="welcome_to_ft">Welcome to Finance Tracker!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clearDB">Clear database</string>
    <string name="action_exportData">Export DB to file</string>
    <string name="action_importData">Restore DB from file</string>
    <string name="action_clearLastBalance">Remove last balance</string>

    <string name="title_add_account">Add account</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_add_balance">Add balance</string>
    <string name="title_edit_balance">Edit balance</string>
    <string name="title_add_transaction">Add transaction</string>
    <string name="title_edit_transaction">Edit transaction</string>
    <string name="title_transaction_filter">Filter transactions</string>

    <string name="neutral_filter">Reset</string>
    <string name="positive_filter">Apply</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="accounts">Accounts</string>
    <string name="balances">Balances</string>
    <string name="transactions">Transactions</string>
    <string name="reports">Reports</string>
    <string name="report_monthly">Monthly report</string>
    <string name="dashboard">Dashboard</string>

    <string name="hint_account_name">Account name</string>
    <string name="hint_account_type">Account type</string>
    <string name="hint_account_open_date">Account open date</string>
    <string name="hint_account_close_date">Account close date</string>
    <string name="hint_balance_value">Balance value</string>
    <string name="currency">Currency</string>
    <string name="save">Save</string>
    <string name="hint_transaction_date">Transaction date</string>
    <string name="hint_transaction_description">Description</string>
    <string name="hint_transaction_value">Value</string>
    <string name="assets">Assets</string>
    <string name="liabilities">Liabilities</string>
    <plurals name="accounts_number_par">
        <item quantity="zero">""</item>
        <item quantity="one">(%1$d account)</item>
        <item quantity="other">(%1$d accounts)</item>
    </plurals>
    <string name="account_closed">Account closed</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="monthly_balance">Monthly balance</string>
    <string name="filter">Filter</string>
    <string name="transactions_type">Transactions type</string>
    <string name="timespan">Timespan</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="categories">Categories</string>
    <string name="button_transaction_menu">Transaction menu button</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="label_account_type">Type</string>
    <string name="account_open_date">Open date</string>
    <string name="account_close_date">Close date</string>
    <string name="hint_transaction_type">Type</string>
    <string name="label_account">Account</string>
    <string name="label_category">Category</string>
    <string name="label_date">Date</string>
    <string name="error_field_empty">Field cannot be empty</string>
    <string name="error_account_not_open">Account has not been opened yet</string>
    <string name="error_account_closed">Account has been closed</string>
    <string name="error_no_accounts_selected">No accounts selected!</string>
    <string name="error_not_a_number">This must be a number</string>
    <string name="total_label">Total:</string>
    <string name="registered_outcome">Registered outcome</string>
    <string name="registered_income">Registered income</string>
    <string name="previous_report">Previous report</string>
    <string name="next_report">Next report</string>
    <string name="base_net_values">Base net values</string>
    <string name="calculated_net_values">Calculated net values</string>
    <string name="total_outcome">Calculated outcome</string>
    <string name="unregistered_outcome">Unregistered outcome</string>
    <string name="channel_name_transaction_input_reminder">Reminder</string>
    <string name="channel_desc_transaction_input_reminder">Reminder about entering transactions</string>
    <string name="notification_title_reminder">Knock, knock…</string>
    <string name="notification_text_reminder">Do you have any transactions to enter?</string>
    <string name="pref_transaction_reminder_enabled">Transactions reminder</string>
    <string name="pref_transaction_reminder_enabled_summary">Enable daily reminders</string>
    <string name="pref_transaction_reminder_time">Set time</string>
    <string name="pref_transaction_reminder_weekdays">Select days of week</string>
    <string name="pref_default_currency">Default currency</string>
    <string name="pref_categories">Transaction categories</string>
    <string name="question_transaction_reminder_decision">Do you want to set daily reminder about entering transactions?</string>
    <string name="your_net_value">Your net value</string>
    <string name="search">Search</string>
    <string name="undo">Undo</string>
    <string name="snackbar_transaction_removed">Transaction \"%1$s\" removed</string>
    <string name="remove_account">Remove account</string>
    <string name="warning_account_used">Account is used after selected date</string>
    <string name="new_category">+ New category</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="connected_transactions_count">%1$d transactions connected</string>
    <string name="info_no_accounts">You have not added any account yet!</string>
    <string name="info_no_balances">You have not entered any balance yet!</string>
    <string name="info_no_transactions">You have not entered any transactions yet!</string>
    <string name="info_not_enough_data">Not enough data to create chart, come back tomorrow!</string>
    <string name="select_all">Select all</string>
    <string name="balance_date">Balance date</string>
    <string name="opening_balance">Opening balance</string>
    <string name="skip">Skip</string>
    <string name="not_available">n/a</string>
    <string name="force_update">Force update</string>

    <!--OUTCOME CATEGORIES INITIAL-->
    <string name="category_name_food">Food</string>
    <string name="category_name_housing">Housing</string>
    <string name="category_name_transportation">Transportation</string>
    <string name="category_name_telecommunication">Telecommunication</string>
    <string name="category_name_healthcare">Healthcare</string>
    <string name="category_name_clothes">Clothes</string>
    <string name="category_name_cosmetics">Cosmetics</string>
    <string name="category_name_education">Education</string>
    <string name="category_name_entertainment">Entertainment</string>
    <string name="category_name_miscellaneous">Miscellaneous</string>

    <!--INCOME CATEGORIES INITIAL-->
    <string name="category_name_salary">Salary</string>
    <string name="category_name_interest">Interest</string>
    <string name="category_name_other">Other income</string>

    <!--ACCOUNTS INITIAL-->
    <string name="account_name_cash">Cash</string>

    <!--LONG TEXTS-->
    <string name="description_and_opening_balance">You just made a step towards better controlling your funds, congratulations!\n
\nIn the app you can track state of your finances and control income and expenses. Reports will help you gain insight into your financial condition.\n
\nIn the beginning enter opening balance for your main account (i.e. cash amount or bank account balance). You can add other accounts at any moment.</string>

    <!--NON TRANSLATABLE KEYS-->
    <string name="transaction_reminder_enabled" translatable="false">transaction_reminder_enabled</string>
    <string name="transaction_reminder_time" translatable="false">transaction_reminder_time</string>
    <string name="transaction_reminder_weekdays" translatable="false">transaction_reminder_weekdays</string>
    <string name="transaction_reminder_decided" translatable="false">transaction_reminder_decided</string>
    <string name="default_currency" translatable="false">default_currency</string>

    <!--ARRAYS-->
    <string-array name="transaction_filter_type">
        <item>All</item>
        <item>Income</item>
        <item>Outcome</item>
    </string-array>

    <string-array name="transaction_filter_timespan">
        <item>Unconstrained</item>
        <item>Last week</item>
        <item>Last month</item>
        <item>This month</item>
        <item>Previous month</item>
        <item>This year</item>
        <item>Custom</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="days_of_week_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
