<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="Transaction_reminder_category"
        android:layout="@layout/preference_category_no_label">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/transaction_reminder_enabled"
            android:summary="@string/pref_transaction_reminder_enabled_summary"
            android:title="@string/pref_transaction_reminder_enabled" />

        <com.mancode.financetracker.ui.prefs.TimePreference
            android:defaultValue="20:00:00"
            android:dependency="@string/transaction_reminder_enabled"
            android:key="transaction_reminder_time"
            android:title="@string/pref_transaction_reminder_time" />

        <MultiSelectListPreference
            android:defaultValue="@array/days_of_week_values"
            android:dependency="@string/transaction_reminder_enabled"
            android:entries="@array/days_of_week"
            android:entryValues="@array/days_of_week_values"
            android:key="transaction_reminder_weekdays"
            android:title="@string/pref_transaction_reminder_weekdays" />
    </PreferenceCategory>

    <!--<PreferenceCategory-->
        <!--android:key="Balance_reminder_category"-->
        <!--android:layout="@layout/preference_category_no_label">-->

        <!--<SwitchPreferenceCompat-->
            <!--android:key="balance_reminder_enabled"-->
            <!--android:title="Enable balances reminder" />-->

    <!--</PreferenceCategory>-->
</androidx.preference.PreferenceScreen>