<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:padding="16dp"
    tools:showIn="@layout/fragment_add_account">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/currency_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_name"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.mancode.financetracker.ui.DropdownInputLayout
        android:id="@+id/currency_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/accountNameInputLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/dropdownCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/currency" />
    </com.mancode.financetracker.ui.DropdownInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="120dp" />

    <TextView
        android:id="@+id/label_account_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_account_type"
        app:layout_constraintBottom_toBottomOf="@+id/accountType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/accountType"
        tools:text="@string/label_account_type" />

    <RadioGroup
        android:id="@+id/accountType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/assets"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/accountNameInputLayout">

        <RadioButton
            android:id="@+id/assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assets" />

        <RadioButton
            android:id="@+id/liabilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liabilities" />

    </RadioGroup>

    <com.mancode.financetracker.ui.SetDateView
        android:id="@+id/accountOpenDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_account_open_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountType" />

    <CheckBox
        android:id="@+id/accountClosed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/account_closed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountOpenDate" />

    <com.mancode.financetracker.ui.SetDateView
        android:id="@+id/accountCloseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:hint="@string/hint_account_close_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountClosed" />

</androidx.constraintlayout.widget.ConstraintLayout>