<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:showIn="@layout/fragment_add_transaction">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valueInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valueField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_transaction_value"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.mancode.financetracker.ui.SetDateView
        android:id="@+id/transactionDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_transaction_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/valueInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_transaction_description"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout">

        <AutoCompleteTextView
            android:id="@+id/accountDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/label_account" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/label_transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_transaction_type"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroupType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroupType"
        tools:text="@string/hint_transaction_type" />

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:checkedButton="@id/rb_outcome"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/label_transaction_type"
        app:layout_constraintTop_toBottomOf="@+id/accountInputLayout">

        <RadioButton
            android:id="@+id/rb_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income" />

        <RadioButton
            android:id="@+id/rb_outcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outcome" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupType">

        <AutoCompleteTextView
            android:id="@+id/categoryDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/label_category" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>