<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context="com.mancode.financetracker.AddAccountFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_account_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:title="@string/title_add_account"
        android:navigationIcon="@drawable/ic_close_white_24dp"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <LinearLayout
        android:layout_below="@id/add_account_toolbar"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        style="@style/AppTheme.Dialog">

        <EditText
            android:id="@+id/tf_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/tf_account_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_type"
            android:inputType="text" />

    </LinearLayout>

</RelativeLayout>
